Removed pointless deps

--- a/Assets/Lachee/ReferenceNavigator/Lachee.ReferenceNavigator.asmdef
+++ b/Assets/Lachee/ReferenceNavigator/Lachee.ReferenceNavigator.asmdef
@@ -1,8 +1,6 @@
 {
     "name": "Lachee.ReferenceNavigator.Plugins",
-    "references": [
-        "GUID:5806a3000d8e85b41a31982c0b3d9cd3"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
